; ModuleID = '/home/carl/AnghaBench/freebsd/tools/bus_space/extr_bus.c_rid_lookup.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/bus_space/extr_bus.c_rid_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { i32 }

@nrids = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@ridtbl = common dso_local global %struct.resource* null, align 8
@ENXIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.resource* (i32)* @rid_lookup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.resource* @rid_lookup(i32 %0) #0 {
  %2 = alloca %struct.resource*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.resource*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = icmp slt i32 %5, 0
  br i1 %6, label %11, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @nrids, align 4
  %10 = icmp sge i32 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %7, %1
  %12 = load i32, i32* @EINVAL, align 4
  store i32 %12, i32* @errno, align 4
  store %struct.resource* null, %struct.resource** %2, align 8
  br label %26

13:                                               ; preds = %7
  %14 = load %struct.resource*, %struct.resource** @ridtbl, align 8
  %15 = load i32, i32* %3, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds %struct.resource, %struct.resource* %14, i64 %16
  store %struct.resource* %17, %struct.resource** %4, align 8
  %18 = load %struct.resource*, %struct.resource** %4, align 8
  %19 = getelementptr inbounds %struct.resource, %struct.resource* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = icmp eq i32 %20, -1
  br i1 %21, label %22, label %24

22:                                               ; preds = %13
  %23 = load i32, i32* @ENXIO, align 4
  store i32 %23, i32* @errno, align 4
  store %struct.resource* null, %struct.resource** %2, align 8
  br label %26

24:                                               ; preds = %13
  %25 = load %struct.resource*, %struct.resource** %4, align 8
  store %struct.resource* %25, %struct.resource** %2, align 8
  br label %26

26:                                               ; preds = %24, %22, %11
  %27 = load %struct.resource*, %struct.resource** %2, align 8
  ret %struct.resource* %27
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
